v0.2 2018/10/02
- multiple methods added
- extrapolation assing
- Lazy polyhedron built
- z3 is ONLY required for certain functions.
v0.1 2017/08/11
- Initial release
- Package adaptation
- ppl C_polyhedron ready