@@ -1,3 +1,5 @@
+- project method
+- eq method
 v0.2 2018/10/02
 - multiple methods added
 - extrapolation assing
